packages/kotlin/ttrp-frontend/src/test/resources/negative/param-002-duplicate.ttrp
param run_date: date = @run-date
param run_date: date
